--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <!-- BODY Content -->
-    <div class="container p-0 my-5">
+    <div class="container p-0 my-2">
         <table class="table table-borderless overflow-x-auto">
             <tbody>
                 <tr>
@@ -129,14 +129,14 @@
     </div>
 
     <div class="card text-center border-0 transparent text-light shadow">
-        <div class="card-body my-2">
+        <div class="card-body">
             <h5 class="card-title perk-name m-0"></h5>
             <div class="card-text perk-info"></div>
         </div>
     </div>
 
     <footer class="my-2">
-        <ul class="nav justify-content-center my-2">
+        <ul class="nav justify-content-center mt-2">
             <li class="nav-item"><a href="index.html" class="nav-link text-light p-2"><img src="./images/gs_icon.png" alt="GUNSLINGER"></a></li>
             <li class="nav-item"><a href="hr.html" class="nav-link text-light p-2"><img src="./images/hr_icon.png" alt="HELLRAISER"></a></li>
             <li class="nav-item"><a href="m.html" class="nav-link text-light p-2"><img src="./images/m_icon.png" alt="MEDIC"></a></li>
