--- a/v.html
+++ b/v.html
@@ -65,63 +65,63 @@
         <table class="table table-borderless overflow-x-auto">
             <tbody>
                 <tr>
-                    <td><img src="images/gs_a1.png" class="img-fluid" id="gsa1"></td>
-                    <td><img src="images/gs_b1.png" class="img-fluid" id="gsb1"></td>
-                    <td><img src="images/gs_c1.png" class="img-fluid" id="gsc1"></td>
-                    <td><img src="images/gs_d1.png" class="img-fluid" id="gsd1"></td>
-                    <td><img src="images/gs_e1.png" class="img-fluid" id="gse1"></td>
-                    <td><img src="images/gs_f1.png" class="img-fluid" id="gsf1"></td>
-                    <td><img src="images/gs_g1.png" class="img-fluid" id="gsg1"></td>
-                    <td><img src="images/gs_h1.png" class="img-fluid" id="gsh1"></td>
-                    <td><img src="images/gs_i1.png" class="img-fluid" id="gsi1"></td>
-                    <td><img src="images/gs_j1.png" class="img-fluid" id="gsj1"></td>
-                    <td><img src="images/gs_k1.png" class="img-fluid" id="gsk1"></td>
-                    <td><img src="images/gs_l1.png" class="img-fluid" id="gsl1"></td>
-                    <td><img src="images/gs_m1.png" class="img-fluid" id="gsm1"></td>
+                    <td><img src="images/v_a1.png" class="img-fluid" id="va1"></td>
+                    <td><img src="images/v_b1.png" class="img-fluid" id="vb1"></td>
+                    <td><img src="images/v_c1.png" class="img-fluid" id="vc1"></td>
+                    <td><img src="images/v_d1.png" class="img-fluid" id="vd1"></td>
+                    <td><img src="images/v_e1.png" class="img-fluid" id="ve1"></td>
+                    <td><img src="images/v_f1.png" class="img-fluid" id="vf1"></td>
+                    <td><img src="images/v_g1.png" class="img-fluid" id="vg1"></td>
+                    <td><img src="images/v_h1.png" class="img-fluid" id="vh1"></td>
+                    <td><img src="images/v_i1.png" class="img-fluid" id="vi1"></td>
+                    <td><img src="images/v_j1.png" class="img-fluid" id="vj1"></td>
+                    <td><img src="images/v_k1.png" class="img-fluid" id="vk1"></td>
+                    <td><img src="images/v_l1.png" class="img-fluid" id="vl1"></td>
+                    <td><img src="images/v_m1.png" class="img-fluid" id="vm1"></td>
                 </tr>
                 <tr>
-                    <td><img src="images/gs_a2.png" class="img-fluid" id="gsa2"></td>
-                    <td><img src="images/gs_b2.png" class="img-fluid" id="gsb2"></td>
-                    <td><img src="images/gs_c2.png" class="img-fluid" id="gsc2"></td>
-                    <td><img src="images/gs_d2.png" class="img-fluid" id="gsd2"></td>
-                    <td><img src="images/gs_e2.png" class="img-fluid" id="gse2"></td>
-                    <td><img src="images/gs_f2.png" class="img-fluid" id="gsf2"></td>
-                    <td><img src="images/gs_g2.png" class="img-fluid" id="gsg2"></td>
-                    <td><img src="images/gs_h2.png" class="img-fluid" id="gsh2"></td>
-                    <td><img src="images/gs_i2.png" class="img-fluid" id="gsi2"></td>
-                    <td><img src="images/gs_j2.png" class="img-fluid" id="gsj2"></td>
-                    <td><img src="images/gs_k2.png" class="img-fluid" id="gsk2"></td>
-                    <td><img src="images/gs_l2.png" class="img-fluid" id="gsl2"></td>
-                    <td><img src="images/gs_m2.png" class="img-fluid" id="gsm2"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><img src="images/gs_b3.png" class="img-fluid" id="gsb3"></td>
-                    <td><img src="images/gs_c3.png" class="img-fluid" id="gsc3"></td>
-                    <td><img src="images/gs_d3.png" class="img-fluid" id="gsd3"></td>
-                    <td></td>
-                    <td><img src="images/gs_f3.png" class="img-fluid" id="gsf3"></td>
-                    <td><img src="images/gs_g3.png" class="img-fluid" id="gsg3"></td>
-                    <td><img src="images/gs_h3.png" class="img-fluid" id="gsh3"></td>
-                    <td></td>
-                    <td><img src="images/gs_j3.png" class="img-fluid" id="gsj3"></td>
-                    <td><img src="images/gs_k3.png" class="img-fluid" id="gsk3"></td>
-                    <td><img src="images/gs_l3.png" class="img-fluid" id="gsl3"></td>
-                    <td></td>
+                    <td><img src="images/v_a2.png" class="img-fluid" id="va2"></td>
+                    <td><img src="images/v_b2.png" class="img-fluid" id="vb2"></td>
+                    <td><img src="images/v_c2.png" class="img-fluid" id="vc2"></td>
+                    <td><img src="images/v_d2.png" class="img-fluid" id="vd2"></td>
+                    <td><img src="images/v_e2.png" class="img-fluid" id="ve2"></td>
+                    <td><img src="images/v_f2.png" class="img-fluid" id="vf2"></td>
+                    <td><img src="images/v_g2.png" class="img-fluid" id="vg2"></td>
+                    <td><img src="images/v_h2.png" class="img-fluid" id="vh2"></td>
+                    <td><img src="images/v_i2.png" class="img-fluid" id="vi2"></td>
+                    <td><img src="images/v_j2.png" class="img-fluid" id="vj2"></td>
+                    <td><img src="images/v_k2.png" class="img-fluid" id="vk2"></td>
+                    <td><img src="images/v_l2.png" class="img-fluid" id="vl2"></td>
+                    <td><img src="images/v_m2.png" class="img-fluid" id="vm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="images/gs_b4.png" class="img-fluid" id="gsb4"></td>
-                    <td><img src="images/gs_c4.png" class="img-fluid" id="gsc4"></td>
-                    <td><img src="images/gs_d4.png" class="img-fluid" id="gsd4"></td>
+                    <td><img src="images/v_b3.png" class="img-fluid" id="vb3"></td>
+                    <td><img src="images/v_c3.png" class="img-fluid" id="vc3"></td>
+                    <td><img src="images/v_d3.png" class="img-fluid" id="vd3"></td>
                     <td></td>
-                    <td><img src="images/gs_f4.png" class="img-fluid" id="gsf4"></td>
-                    <td><img src="images/gs_g4.png" class="img-fluid" id="gsg4"></td>
-                    <td><img src="images/gs_h4.png" class="img-fluid" id="gsh4"></td>
+                    <td><img src="images/v_f3.png" class="img-fluid" id="vf3"></td>
+                    <td><img src="images/v_g3.png" class="img-fluid" id="vg3"></td>
+                    <td><img src="images/v_h3.png" class="img-fluid" id="vh3"></td>
                     <td></td>
-                    <td><img src="images/gs_j4.png" class="img-fluid" id="gsj4"></td>
-                    <td><img src="images/gs_k4.png" class="img-fluid" id="gsk4"></td>
-                    <td><img src="images/gs_l4.png" class="img-fluid" id="gsl4"></td>
+                    <td><img src="images/v_j3.png" class="img-fluid" id="vj3"></td>
+                    <td><img src="images/v_k3.png" class="img-fluid" id="vk3"></td>
+                    <td><img src="images/v_l3.png" class="img-fluid" id="vl3"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><img src="images/v_b4.png" class="img-fluid" id="vb4"></td>
+                    <td><img src="images/v_c4.png" class="img-fluid" id="vc4"></td>
+                    <td><img src="images/v_d4.png" class="img-fluid" id="vd4"></td>
+                    <td></td>
+                    <td><img src="images/v_f4.png" class="img-fluid" id="vf4"></td>
+                    <td><img src="images/v_g4.png" class="img-fluid" id="vg4"></td>
+                    <td><img src="images/v_h4.png" class="img-fluid" id="vh4"></td>
+                    <td></td>
+                    <td><img src="images/v_j4.png" class="img-fluid" id="vj4"></td>
+                    <td><img src="images/v_k4.png" class="img-fluid" id="vk4"></td>
+                    <td><img src="images/v_l4.png" class="img-fluid" id="vl4"></td>
                     <td></td>
                 </tr>
             </tbody>
