--- a/weapon_pages/stats/dualknives.html
+++ b/weapon_pages/stats/dualknives.html
@@ -108,7 +108,7 @@
         </div>
     </div>
 
-    <div class="card w-75 mx-auto bg-warning-subtle">
+    <div class="card w-75 mx-auto bg-warning-subtle my-2">
         <div class="card-header">Light Melee</div>
         <div class="card-body">
           <h4 class="card-title text-center">Duel Knives</h4>
