--- a/weapon_pages/stats/tomahawk.html
+++ b/weapon_pages/stats/tomahawk.html
@@ -108,7 +108,7 @@
         </div>
     </div>
 
-    <div class="card w-75 mx-auto bg-warning-subtle">
+    <div class="card w-75 mx-auto bg-warning-subtle mb-4">
         <div class="card-header">Medium Melee</div>
         <div class="card-body">
           <h4 class="card-title text-center">Tomahawk</h4>
