--- a/weapon_pages/stats/t1machine.html
+++ b/weapon_pages/stats/t1machine.html
@@ -122,7 +122,7 @@
         <div class="list-group w-100">
 
             <label class="list-group-item list-group-item-danger d-flex gap-2">
-                <input type="radio" name="uniquePerk">
+                <input type="radio" name="uniquePerk" id="refresh">
                 <div>Refreshing Kills
                     <small class="d-block text-body-secondary">Full-auto mode instead of burst-fire. Killing a special zombie with this pistol reloads your primary weapon.</small>
                 </div>
